--- a/public/index.html
+++ b/public/index.html
@@ -12,21 +12,22 @@
     <!-- <button id="join">Join websocket</button>
     <button id="send-message">Send message</button> -->
     <h2>Teste de Audio</h2>
-    <audio id="gum-local" controls autoplay></audio>
+    <!-- <audio id="gum-local" controls autoplay></audio> -->
 
-    <!-- <div>
+    <div>
+      <button id="init-stream">Iniciar Stream</button>
+      <button id="init-audio">Adicionar Audio</button>
       <button id="recorder-button">
         <div id="recorder-button-div">Gravar</div>
       </button>
       <audio id="audio"></audio>
-      <script src="web_audio_recorder_js/WebAudioRecorder.js"></script>
-      <script src="script.js"></script>
-    </div> -->
+    </div>
 
-    <!-- <script src="./js/script.js"></script>
     <script src="web_audio_recorder_js/WebAudioRecorder.js"></script>
     <script src="./js/audio.js"></script>
-    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script> -->
-    <script src="./js/main.js"></script>
+    <!-- <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script> 
+    <script src="./js/script.js"></script> 
+    <script src="./js/main.js"></script> 
+    <script src="./js/wavheader.js"></script> -->
   </body>
 </html>
